--- a/css/main.css
+++ b/css/main.css
@@ -486,6 +486,9 @@ footer{
 	* {
 	font-size: 25px;
 }
+.brand img {
+	margin: auto 0;
+}
 /*banner*/
 #banner{
 	background-image: url(../img/banner.jpeg);
