--- a/css/grid.css
+++ b/css/grid.css
@@ -71,7 +71,7 @@
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
     .col {
-        margin: 1% 0 1% 0%;
+        margin: 0;
     }
     .one,
     .two,
