--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,41 @@ a {
 	min-width: 320px;
 	margin: 0 auto;
 }
+/*Animate*/
+@-webkit-keyframes fadeInUp {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+    }
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+.fadeInUp {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
+}
 /*header*/
 #head{
 	position:fixed;
@@ -35,19 +70,12 @@ a {
 	z-index:1;
 	height: auto;
 }
-#head
   .brand{
 	float: left;
 	width: 50px;
 	margin:15px;
 	margin-left:25px;
 }  
-.brand-scroll{
-	width: 30px;
-	margin: 10px;
-	margin-left:30px;
-	float:left;
-}
 .menu {
 	float: right;
 }
@@ -58,8 +86,10 @@ a {
  .menu-items{
 	display: inline-block;
 	padding: 0 10px;
-	font-weight: bolder;
-	opacity: .8;
+}
+.menu-items a {
+	font-family: 'Teko', sans-serif !important;
+	font-size: 20px;
 }
 
 .menu-items:first-child{
@@ -68,9 +98,6 @@ a {
 }
 .menu-items:last-child{
 	margin-right:30px !important;
-}
-.menu-items:hover{
-	opacity: 1;
 }
 /*back to top*/
 .scrollTop{
@@ -82,14 +109,17 @@ a {
 	border-radius: 3px;
 }
 .scrollTop i {
-	padding: 20px;
+	padding: 28px 30px;
 }
 /*banner*/
-.banner{
-	background-image: url(../img/banner.jpeg);
+#banner{
+	background-image: url(../img/banner.jpg);
 	background-size: cover;
 	height: 100vh;
 	background-repeat: no-repeat;
+	display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner-img  h3 {
@@ -293,21 +323,20 @@ footer{
 /*mobile*/
 @media (max-width: 425px){
 	.brand{
-	float: none;
-	margin: 10px auto;
-	width: 75px !important;
+	display: none;
 }
 .menu {
 	float: none;
 }
 .menu-bar{
 	list-style-type: none;
+	margin: 0;
 }
 .menu-items{
 	display: none;
 	text-align: center;
 	margin:0;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 	transition: all .8s ease-in;
 }
 .menu-items:first-child{
@@ -315,13 +344,16 @@ footer{
 	text-align: right;
 	padding-right: 15px;
 	right:0;
+	margin-bottom: 0;
+	padding-bottom: 0;
 	padding-top: 15px;
 	cursor: pointer;
 	font-size: 25px;
 }
 .menu-items:last-child{
-	margin-right:0 !important;
 	padding-bottom: 0;
+	margin:0 !important;
+	text-align: center;
 }
 .menu-items:hover{
 	opacity: 1;
@@ -376,7 +408,7 @@ footer{
 }
 /*contact*/
 .contact{
-	height: auto;
+	height: auto !important;
 	padding-bottom: 15px;
 }
 .forms input, .forms button, .forms textarea {
@@ -396,6 +428,9 @@ footer{
 }
 /*tablet*/
 @media (max-width: 768px)and (min-width: 426px){
+	#head{
+		background-color: #fff;
+	}
 .brand{
 	float: none;
 	margin: 25px auto;
@@ -429,7 +464,7 @@ footer{
 /*banner 320*/
 .banner-img  h3 {
 	font-size: 130%;
-	padding-top: 10% !important;
+	padding-top: 20% !important;
 }
 .banner-img  h1 {
 	font-size: 320%;
@@ -511,8 +546,8 @@ footer{
 	font-size: 25px;
 }
 /*banner*/
-.banner{
-	background-image: url(../img/banner.jpeg);
+#banner{
+	background-image: url(../img/banner.jpg);
 	background-size: cover;
 	height: 90vh;
 	background-repeat: no-repeat;
