--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ a {
 	text-shadow: 1px 1px 1px #333;
 }
 .banner-img  h1 {
-	text-align: center;
+	text-align: left !important;
 	text-transform: uppercase;
 	font-size: 400%;
 	text-shadow: 1px 2px 2px #333;
@@ -321,7 +321,7 @@ footer{
 
 /*media queries*/
 /*mobile*/
-@media (max-width: 425px){
+@media (max-width: 425px)and (min-width: 200px){
 	.brand{
 	display: none;
 }
@@ -407,8 +407,10 @@ footer{
 	text-indent: 0;
 }
 /*contact*/
+#contact {
+	height: auto;
+}
 .contact{
-	height: auto !important;
 	padding-bottom: 15px;
 }
 .forms input, .forms button, .forms textarea {
@@ -427,7 +429,7 @@ footer{
 }
 }
 /*tablet*/
-@media (max-width: 768px)and (min-width: 426px){
+@media (max-width: 768px) and (min-width: 426px){
 	#head{
 		background-color: #fff;
 	}
