--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ a {
 }
 /*banner*/
 #banner{
-	background-image: url(../img/banner.jpg);
+	background-image: url(../img/banner.JPG);
 	background-size: cover;
 	height: 100vh;
 	background-repeat: no-repeat;
